--- a/mcp-client/src/main/resources/application.properties
+++ b/mcp-client/src/main/resources/application.properties
@@ -4,5 +4,7 @@ spring.ai.mcp.client.sse.connections.server1.url=http://localhost:8899
 spring.ai.mcp.client.sse.connections.server1.sse-endpoint=/sse
 spring.ai.mcp.client.stdio.servers-configuration=classpath:mcp-servers.json
 server.port=8066
-spring.ai.anthropic.api-key=${CLAUDE_API_KEY}
-spring.ai.anthropic.chat.options.model=claude-sonnet-4-20250514
+#spring.ai.anthropic.api-key=${CLAUDE_API_KEY}
+#spring.ai.anthropic.chat.options.model=claude-sonnet-4-20250514
+spring.ai.ollama.base-url=http://localhost:11434
+spring.ai.ollama.chat.model=llama3.1
